--- a/OutGoing Volunnter.html
+++ b/OutGoing Volunnter.html
@@ -172,7 +172,7 @@
                     <span class="stat-number mainNav">120</span>
                     <font class="stat-plus">+</font>
                 </div>
-                <a class="stat-title">支持專案國家數</a>
+                <a class="stat-title">可申請專案國家數</a>
             </div>
             <div align=center>
                 <div class="inline-flag">
@@ -187,7 +187,7 @@
                     <span class="stat-number">500000</span>
                     <font class="stat-plus">+</font>
                 </div>
-                <a class="stat-title">提供海外成長專以來
+                <a class="stat-title">提供海外成長專案以來
                     <br>所有達成的人數</a>
             </div>
             <div>
@@ -285,7 +285,7 @@
 
                         <h3 class="mb-3">良好的學習環境</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們設定了明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">設定明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -295,7 +295,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">清楚的工作說明</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們將在第一天陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">我們將陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -305,7 +305,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">實質上的幫助</h3>
                         <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證，以及接送機資訊。</div>
+                        <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證及接送機資訊。</div>
                     </div>
                 </div>
             </div>
