--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -84,7 +84,7 @@
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                               <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
                             <a href="#" class="collapse-font">全球人才實習</a>>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                         <!--                       Global Talent is an internship experience for young people<br>aiming towards professional career development in a global setting.-->
                     </p>
 
-<!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
+                    <!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
 
 
                 </div>
@@ -129,12 +129,45 @@
         </div>
 
     </header>
+
+    <div class="count-font section-count">
+        <div class="stat-wrap wow fadeIn" style="margin-bottom: 0px">
+            <div></div>
+            <div align=center>
+                <div class="inline-flag">
+                    <span class="stat-number mainNav">300</span>
+                    <l class="stat-plus"> +</l>
+                </div>
+                <a class="stat-title">提供實習職缺</a>
+            </div>
+            <div align=center>
+                <div class="inline-flag">
+                    <span class="stat-number mainNav">100</span>
+                    <l class="stat-plus"> +</l>
+                </div>
+                <a class="stat-title">全球合作公司</a>
+            </div>
+            <div align=center>
+
+                <div class="inline-flag">
+                    <span class="stat-number mainNav">9000</span>
+                    <l class="stat-plus"> +</l>
+                </div>
+                <a class="stat-title">
+                    成功媒合人數</a>
+            </div>
+            <div>
+            </div>
+        </div>
+
+    </div>
     <section id="video" class="section-video btn-mobile">
         <div class="container">
             <div class="row align-items-center no-gutters ">
                 <div class="col-xl-5">
                     <div class="video-container">
-                        <iframe width="50%" height="50%" src="https://www.youtube.com/embed/myVpaKuER-0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/il-AUmgggLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="col-xl-6">
@@ -152,37 +185,7 @@
 
 
 
-    <div class="count-font section-count">
-        <div class="stat-wrap wow fadeIn" style="margin-bottom: 0px">
-            <div></div>
-            <div align=center>
-                <div class="inline-flag">
-                    <span class="stat-number mainNav">100</span>
-                    <l class="stat-plus"> </l>
-                </div>
-                <a class="stat-title">海外實習</a>
-            </div>
-            <div align=center>
-                <div class="inline-flag">
-                    <span class="stat-number mainNav">300</span>
-                    <l class="stat-plus"> +</l>
-                </div>
-                <a class="stat-title">合作公司</a>
-            </div>
-            <div align=center>
 
-                <div class="inline-flag">
-                    <span class="stat-number mainNav">9000</span>
-                    <l class="stat-plus"> +</l>
-                </div>
-                <a class="stat-title">
-                    所有達成的人數</a>
-            </div>
-            <div>
-            </div>
-        </div>
-
-    </div>
     <!-- 可以從海外實習獲得什麼-->
     <section id="services" class="section-whbacolor why-choose-text">
         <div class="container">
@@ -194,7 +197,7 @@
         </div>
         <br>
         <div class="wow fadeInDown" style="animation-duration: 1.5s">
-            <p style="text-align: center" class="container sdg-font">我們的海外成長計畫目的是讓所有認同AIESEC價值的青年能夠採取行動</p>
+            <p style="text-align: center" class="container sdg-font">我們的海外實習計畫目的是讓所有認同AIESEC價值的青年能夠採取行動</p>
         </div>
         <div class="container" style="padding-top: 2rem;padding-bottom: 8rem">
             <div class="row">
@@ -205,7 +208,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <h2 class="mb-3">跨國職場體驗</h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">透過三個月到十二個月不等的海外實習,不僅能深入了解該國的企業文化,更能實際擁有跨國職場的經驗。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">三個月到十二個月的海外實習<br>實際擁有跨國職場的經驗</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -216,7 +219,7 @@
 
                         <h2 class="mb-3">多元職缺選擇</h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">AIESEC在世界上124個國家皆有據點,因此更能提供不同的國家與類型的職缺機會給世界各地的青年做選擇。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">提供不同的國家與多元的職缺機會給青年做選擇</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -226,7 +229,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <h2 class="mb-3">提升自我競爭力</h2>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">透過實際的海外職場經驗,不僅能在過程中培養到國際移動力,更能有效提升自我的競爭力。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">培養青年國際移動力<br>有效提升自我的競爭力</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -236,7 +239,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <h2 class="mb-3">累積人生閱歷</h2>
                         <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">在海外的工作環境裡,不僅能擴大自己的國際視野，更能在過程中累積自身更多的經驗,以利於未來發展。</div>
+                        <div class="text-muted mb-0 line-height-35 section-text">在海外擴大自己的國際視野<br>累積自身經驗利於未來發展</div>
                     </div>
                 </div>
             </div>
@@ -260,9 +263,9 @@
                         <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">安全的生活條件</h3>
+                        <h3 class="mb-3">當地生活協助</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">您將在辦理保險後收到有關住宿和基本生活開銷的資訊。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">我們將協助提供住宿方案和<br>基本生活開銷的資訊</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -273,7 +276,7 @@
 
                         <h3 class="mb-3">良好的學習環境</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們設定了明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">我們設定了明確的目標,讓您了解當地文化和工作環境</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -281,9 +284,9 @@
                         <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">清楚的工作說明</h3>
+                        <h3 class="mb-3">清楚的工作保障</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們將在第一天陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">第一天將由當地的實習生夥伴陪同您到專案地點，確保您的專案與合約上的條件描述一致</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -291,9 +294,9 @@
                         <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
                     </div>
                     <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">實質上的幫助</h3>
+                        <h3 class="mb-3">專人服務</h3>
                         <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證，以及接送機資訊。</div>
+                        <div class="text-muted mb-0 line-height-35 section-text">在您申請流程當中，我們協助您做面試與履歷的相關準備並提供當地簽證資訊 </div>
                     </div>
                 </div>
             </div>
@@ -317,7 +320,7 @@
                     <p class="section-heading wow fadeInDown section-title">常見問與答</p>
                     <br><br>
                 </div>
-                <iframe src="indexFAQ.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="indexFAQ_GT.html" width="100%" height="450px" frameborder="0" scrolling="yes"></iframe>
             </div>
         </div>
     </section>
@@ -414,6 +417,7 @@
 
     <script>
         new WOW().init();
+
     </script>
 
     <script>
@@ -436,7 +440,10 @@
                 `<a>${record.fields.ogt_data_info}</a>`
             );
         });
+
     </script>
 
 
-</body></html>
+</body>
+
+</html>
