--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <h5 class="card-text1" align=center><br>和來自各地的志工一起發揮影響力，完成與聯合國發展目標結合的專案</h5>
                             <br>
                             <div class="card-text9" align=center>計畫長度</div>
-                            <h5 class="card-text1" align=center>6-8周</h5>
+                            <h5 class="card-text1" align=center>6-8週</h5>
                             <br>
                             <div class="card-text9" align=center>服務單位</div>
                             <h5 class="card-text1" align=center>非營利組織</h5>
@@ -240,12 +240,12 @@
                             <h5 class="card-text1" align=center><br>進入國際企業實習，提升職場專業能力，成為全球人力市場的搶手人才</h5>
                             <br>
                             <div class="card-text9" align=center>計畫長度</div>
-                            <h5 class="card-text1" align=center>6-78周</h5>
+                            <h5 class="card-text1" align=center>6-78週</h5>
                             <br>
                             <div class="card-text9" align=center>服務單位</div>
                             <h5 class="card-text1" align=center>企業</h5>
                             <br>
-                            <div class="card-text9" align=center>薪資報酬</div>
+                            <div class="card-text9" align=center>實習津貼</div>
                             <h5 class="card-text1" align=center>支薪</h5>
                         </div>
                     </div>
@@ -259,16 +259,16 @@
                             <h4 class="card-title">
                                 <img src="img/Global_Entrepreneur.png" width="50%" height="50%">
                             </h4>
-                            <h5 class="card-text1" align=center><br>加入快速成長的新創團隊，短時間培養職場即戰力</h5>
+                            <h5 class="card-text1" align=center><br>加入快速成長的新創團隊，短時間培養職場即戰力<br><br></h5>
                             <br>
                             <div class="card-text9" align=center>計畫長度</div>
-                            <h5 class="card-text1" align=center>6-12周</h5>
+                            <h5 class="card-text1" align=center>6-12週</h5>
                             <br>
                             <div class="card-text9" align=center>服務單位</div>
                             <h5 class="card-text1" align=center>新創團隊</h5>
                             <br>
-                            <div class="card-text9" align=center>薪資報酬</div>
-                            <h5 class="card-text1" align=center>不支薪</h5>
+                            <div class="card-text9" align=center>福利</div>
+                            <h5 class="card-text1" align=center>住宿提供</h5>
                         </div>
                     </div>
                     </a>
@@ -287,7 +287,7 @@
             </div>
         </div>
         <div class="wow fadeInDown" style="animation-duration: 1.5s">
-            <p style="text-align: center" class="container section-text">我們的海外成長計畫目的是讓所有認同AIESEC價值的青年能夠採取行動</p>
+            <p style="text-align: center" class="container section-text">我們提供的計畫目的是讓所有認同AIESEC價值的青年能夠採取行動</p>
         </div>
         <div class="container" style="padding-top: 1rem;padding-bottom: 1rem">
             <div class="row">
@@ -298,18 +298,19 @@
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">與聯合國簽署獨家合作</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">承諾 2030 年以前致力於讓更多青年投入聯合國永續發展目標，透過創新且有效的專案讓全球 80000+ 位青年投入其中</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">承諾 2030 年以前致力於讓更多青年投入聯合國永續發展目標，透過創新且有效的專案讓<br>全球 80000+ 位青年投入其中</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
                         <img src="img/leadership.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
-                    <div class="service-box mt-5 mx-auto">
+                    <div class="service-box mt-5 mx-auto，">
 
                         <h3 class="mb-3">獨特領導力培訓計畫</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們系統化地培養領導力，透過 AIESEC 領導力評估測驗，將有專人給予引導，有效培養青年領導力</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">我們系統化地培養領導力
+                        <br>透過 AIESEC 領導力評估測驗<br>將有專人給予引導，有效培養青年領導力</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -319,7 +320,7 @@
                     <div class="service-box mt-5 mx-auto">
                         <h3 class="mb-3">建立國際人脈連結</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">每年聚集 40000+ 位同樣關心國際議題的青年，為青年發聲、實踐社會責任</p>
+                        <p class="text-muted mb-0 line-height-35 section-text">每年聚集 40000+ 位同樣關心國際議題的青年<br>為青年發聲、實踐社會責任</p>
                     </div>
                 </div>
             </div>
