--- a/indexFAQ_GT.html
+++ b/indexFAQ_GT.html
@@ -19,25 +19,25 @@
     <div class="col-lg-6 flaot_lf">
         <div class="accordion">
             <div class="accordion-item accordion-text">
-                <a>我需要付多少行政費才能參加海外實習/海外青創專案?</a>
+                <a>媒合海外實習專案我需要支付多少行政費?</a>
                 <div class="content">
-                    <li>這要依照您選擇的國家所更動。</li>
+                    <li>行政費總共為新台幣14,000元，當中包含一份1,400元的專業人才測評分析報告．並只會在您確認媒合成功之後收取。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>我所付的行政費是否包含我抵達專案地點的費用?</a>
                 <div class="content">
-                    <li>否，您需要自行去訂購機票，辦理簽證及保險，但這些流程我們的專員都會協助您去完成。</li>
+                    <li>否，您需要自行訂購機票及辦理保險．簽證流程我們的專員將提供相關資訊。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
-                <a>請問海外實習/海外青創專案為期多久?</a>
+                <a>請問海外實習專案為期多久?</a>
                 <div class="content">
-                    <li>我們大部分提供的海外實習專案為期6到週。</li>
+                    <li>我們大部分提供的海外實習專案為三個月到一年。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
-                <a>參加海海外實習/海外青創的條件為何?</a>
+                <a>參加海外實習的條件為何?</a>
                 <div class="content">
                     <li>18 至 30歲間。</li>
                     <li>英文程度須達一定標準。(可流利地以英文與他人對話)</li>
@@ -46,7 +46,7 @@
             <div class="accordion-item accordion-text">
                 <a>我在專案地點該與誰聯絡?</a>
                 <div class="content">
-                    <li>在您出發參與專案之前，專案國家將會有專人提供您任何您需要的協助。</li>
+                    <li>在您出發參與專案之前，當地將會有專人提供任何您需要的協助。</li>
                 </div>
             </div>
         </div>
@@ -54,15 +54,15 @@
     <div class="col-lg-6 float_rt">
         <div class="accordion">
             <div class="accordion-item accordion-text">
-                <a>在出發參與專案前，需要準備那些文件?</a>
+                <a>在媒合流程當中，我將需要準備什麼資料?</a>
                 <div class="content">
-                    <li>不同國家有不同的要求，不過您會需要的有護照與邀請函。</li>
+                    <li>根據不同專案將有不同的要求，不過皆會需要您的英文履歷。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問專案是支薪的嗎?</a>
                 <div class="content">
-                    <li>部分有，大部分實習專案支薪，青創則要看公司條件為何。</li>
+                    <li>所有實習專案皆為支薪。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
@@ -72,15 +72,15 @@
                 </div>
             </div>
             <div class="accordion-item accordion-text">
-                <a>參加海外實習/海外青創的篩選步驟為何?</a>
+                <a>參加海外實習的媒合流程為何?</a>
                 <div class="content">
-                    <li>您必須先申請專案，通過面試後即可立即出發。</li>
+                    <li>我們將協助您申請專案，通過公司面試流程後即為媒合成功。</li>
                 </div>
             </div>
             <div class="accordion-item accordion-text">
                 <a>請問在台灣有多少分會我可以做諮詢?</a>
                 <div class="content">
-                    <li>我們在台有16個分會。</li>
+                    <li>我們在台灣有7個分會將協助您整個媒合流程。</li>
                 </div>
             </div>
         </div>
