--- a/ogv_info_session_form.html
+++ b/ogv_info_session_form.html
@@ -95,7 +95,7 @@
                     <tr>
                         <td>
                             <select class="form-control" id="00N70000002UFlz" title="Information Channel" name="00N70000002UFlz">
-                                <option value="default">從什麼管道得知海外成長計畫</option>
+                                <option value="default">從什麼管道得知海外成長專案</option>
                                 <option value="親朋好友介紹">親朋好友介紹(包含看到朋友的PO文)</option>
                                 <option value="校園擺攤活動">校園擺攤活動</option>
                                 <option value="Facebook 粉絲專頁">Facebook 粉絲專頁</option>
