--- a/joinUs.html
+++ b/joinUs.html
@@ -151,7 +151,8 @@
                         <img src="img/recruitment_reason_1.png" class="fas fa-4x text-primary mb-3  change">
                     </div>
                     <div class="service-box mt-5 mx-auto">
-                        <h2 class="mb-3">實戰力 Get</h2>
+                        <h2 class="mb-3">團隊實務經驗
+</h2>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">與團隊達成共同目標<br>並爭取團隊領導或管理經驗
 </p>
@@ -163,8 +164,7 @@
                     </div>
                     <div class="service-box mt-5 mx-auto">
 
-                        <h2 class="mb-3">國際觀 Get
-                        </h2>
+                        <h2 class="mb-3">國際機會</h2>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">參與跨文化交流機會、開拓國際視野<br>提升議題敏感度
                         </p>
@@ -175,8 +175,7 @@
                         <img src="img/recruitment_reason_2.png" class="fas fa-4x text-primary mb-3  change">
                     </div>
                     <div class="service-box mt-5 mx-auto">
-                        <h2 class="mb-3">人生目標 Get
-                        </h2>
+                        <h2 class="mb-3">多元挑戰</h2>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">磨練思維與價值觀、探索個人熱情<br>瞭解自我價值
 
@@ -194,46 +193,46 @@
         <div class="container mt-5">
             <div class="main-timeline">
                 <div class="timeline">
-                    <a href="" class="timeline-content">
+                    <a class="timeline-content">
                         <div class="timeline-icon">
                             <i class="fa fa-child"></i>
                         </div>
                         <div class="inner-content">
                             <h3 class="title">上學期|成員階段｜影響力的開始</h3>
-                            <p class="description">?</p>
+                            <p class="description">加入AIESEC部門成為團隊一員後，你將在專案運行過程中體驗工作轉速快的學習環境。 部門專案運行中，不僅是增進專業能力與團隊合作能力，亦是摸索自我潛能，並透過團隊的交流互相給予回饋，磨練自己同時幫助他人成長。</p>
                         </div>
                     </a>
                 </div>
                 <div class="timeline">
-                    <a href="" class="timeline-content">
+                    <a class="timeline-content">
                         <div class="timeline-icon">
                             <i class="fa fa-globe"></i>
                         </div>
                         <div class="inner-content">
                             <h3 class="title">寒暑假|探索｜更大的世界與自己</h3>
-                            <p class="description">?</p>
+                            <p class="description">寒暑假將有機會爭取跨文化交流機會，與當地AIESEC共同完成6-8週議題專案。或參與全國領導力會議，與全台16分會及其他國家AIESEC成員交流，共同討論青年影響力。</p>
                         </div>
                     </a>
                 </div>
                 <div class="timeline">
-                    <a href="" class="timeline-content">
+                    <a class="timeline-content">
                         <div class="timeline-icon">
                             <i class="fas fa-user-friends fa-xs"></i>
                         </div>
                         <div class="inner-content">
                             <h3 class="title">下學期|中階幹部｜專業的成長與反思</h3>
-                            <p class="description">?</p>
+                            <p class="description">下學期成為中階幹部，將能參與分會內及全國性培訓會議，並獨立帶領團隊或獨立完成專案。在領導過程中，你將練習獨自面對挑戰，磨練堅持而正向的心態，練習引導與帶領團隊朝向共同目標。</p>
                         </div>
                     </a>
                 </div>
                 <div class="timeline">
-                    <a href="" class="timeline-content">
+                    <a class="timeline-content">
                         <div class="timeline-icon">
                             <i class="fas fa-haykal fa-sm"></i>
                         </div>
                         <div class="inner-content">
                             <h3 class="title">新學年|部門領導者｜領導者的影響力與韌性</h3>
-                            <p class="description">?</p>
+                            <p class="description">成為部門領導者，你將與全國16分會的部門領導者組成全國團隊，共同決策AIESEC台灣部門方向。 過程中不只磨練管理能力、邏輯思辨 與 複雜問題解決能力。並有一群台灣各處的志同道合團隊，一同實踐心中的理想，對他人與世界產生影響力。</p>
                         </div>
                     </a>
                 </div>
