--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -37,6 +37,8 @@
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/airtable@0.6.0/lib/airtable.min.js'></script>
+    <!--    Font Awasome-->
+    <script src="https://kit.fontawesome.com/b5f2eee69d.js"></script>
 
 </head>
 <div id="overlay">
@@ -98,7 +100,7 @@
             <div class="row">
 
                 <div class="col-lg-12">
-                    <h1 class="text-uppercase animated zoomIn header-font fontsize" style="animation-duration: 1s;animation-delay: 0.5s">
+                    <h1 class="text-uppercase animated zoomIn fontsize" style="animation-duration: 1s;animation-delay: 0.5s">
 
                         <strong>
                             <br><br>
@@ -109,14 +111,9 @@
                         </strong>
                     </h1>
                     <br>
-
                     <div class="animated fadeInDown" style="animation-duration: 1s; animation-delay: 1.5s;animation-delay: 1s">
-
-                        <p class="fontsize">
-                            <a id="info-igv" class="fontsize">
-                                <!--  Global Talent is an internship experience for young people<br>aiming towards professional career development in a global setting.-->
-                            </a>
-
+                        <p class="fontsize" id="info-igv">
+                            <!--  Global Talent is an internship experience for young people<br>aiming towards professional career development in a global setting.-->
                         </p>
                     </div>
                 </div>
@@ -124,18 +121,20 @@
 
             </div>
 
-            <div class="container value wow bounce mb-0" data-wow-iteration="3">
+            <div class="container value wow bounce mb-0 mobile-hidden" data-wow-iteration="3">
                 <a class="fas fa-angle-down fa-3x js-scroll-trigger value" href="#video" style="color:rgb(255,255,255,0.7)"></a>
             </div>
         </div>
     </header>
+
+
     <section id="video" class="section-video">
         <div class="container-igt">
             <div class="row align-items-center no-gutters ">
-                <div class="col-xl-6">
-                    <img src="img/Global_talent.png" class="subheader" width="50%" height="50%">
+                <div class="col-xl-5">
+                    <img src="img/Global_talent.png" class="subheader" style="display: block; margin: auto">
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-7">
                     <div class="text-black-50 ">
                         <p class="igtinfo-text">我們提供合作流程中的所有支援，例如篩選實習生、處理簽證、抵臺接機與文化交流。協助外國實習生融入台灣社會與職場環境，透過此實習計畫培養其領導能力，並建立您的企業與外國實習生之間的溝通橋樑。</p>
                     </div>
@@ -205,8 +204,79 @@
         </div>
     </section>
 
+    <!-- 合作流程-->
+    <section id="reason" class="section-whbacolor why-choose-text">
+        <div class="container-igt">
+            <p class="section-heading wow fadeInDown section-title">合作流程</p>
+            <div class="row mb-5">
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="0.5s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">1</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3 five-reason-title">簽約合作</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            詳細訂定外國實習生之背景需求、面試審核標準與實習內容。
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="0.7s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">2</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+
+                        <h3 class="mb-3 five-reason-title">尋找實習生</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            定期提供您具有潛力與符合資格的實習生名單。
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="0.9s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">3</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3 five-reason-title">面試篩選</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            我們將與實習生進行初步面試篩選，確保實習生品質，再安排合適的實習生與您面試
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="1.1s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">4</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3 five-reason-title">確認實習生和簽證</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            當您確認實習生名單後，我們將開始辦理政府實習公文、協助實習生辦理簽證等流程
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-1-5 text-center wow fadeIn" data-wow-delay="1.3s">
+                    <div class="service-box mt-3 mx-auto">
+                        <p class="stepNum">5</p>
+                    </div>
+                    <div class="service-box mt-2 mx-auto">
+                        <h3 class="mb-3 five-reason-title">實習生抵臺</h3>
+                        <hr class="gray">
+                        <p class="text-muted mb-0 line-height-35 section-text five-reason-info">
+                            我們的團隊將負責接機等接待實習生抵臺相關事項，使其融入台灣社會與工作環境
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- AIESEC所會提供的-->
-    <section id="provides" class="section-grbacolor why-choose-text">
+    <section id="provides" class="section-whbacolor why-choose-text">
         <div class="container-igt">
             <div class="row">
                 <div class="col-lg-12 text-center">
