--- a/aiesec old register/igv_contact_form.html
+++ b/aiesec old register/igv_contact_form.html
@@ -1,3 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>聯絡全球青年在地發展</title>
+
+    <!--    css for this page-->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/recruitment.css">
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon2.png" />
+</head>
+
+<body>
+    <div class="row mt-5">
+        <div class="container">
+            <form id="igv-contact-form" action="mailto:taiwan@aiesec.net" method="POST" accept-charset="UTF-8">
+            
+            </form>
+
+        </div>
+    </div>
+
+
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
+</body>
+
+</html>
+
+
+
 <div style="position: relative;">
     <form id="igv-contact-form" action="mailto:taiwan@aiesec.net" method="POST" accept-charset="UTF-8">
         <div class="g-grid">
@@ -7,251 +50,27 @@
         </div>
         <div class="g-grid">
             <div class="g-block size-33 e-form-element">
-                <input id="name" type="text" name="name" required placeholder="姓名">
+                <input id="name" type="text" name="name" required placeholder="組織、校方代表姓名">
             </div>
             <div class="g-block size-33 e-form-element">
                 <input id="email" type="text" name="email" required placeholder="電子郵件">
             </div>
             <div class="g-block size-33 e-form-element">
-                <select id="lc-mail" name="lc-mail">
-                    <option selected="selected">選擇合作分會</option>
-                    <option value="aiesec.ntpu7@aiesec.net">台北大學 | aiesec.ntpu7@aiesec.net</option>
-                    <option value="taiwan_nccu.igv@aiesec.net">政治大學 | taiwan_nccu.igv@aiesec.net</option>
-                    <option value="aiesecfju.igv@aiesec.net">輔仁大學 | aiesecfju.igv@aiesec.net</option>
-                    <option value="igv.ntu@aiesec.net">台灣大學 | igv.ntu@aiesec.net</option>
-                    <option value="igv.scu@aiesec.net">東吳大學 | igv.scu@aiesec.net</option>
-                    <option value="aiesec.mcu@aiesec.net">銘傳大學 | aiesec.mcu@aiesec.net</option>
-                    <option value="ncu.igv@aiesec.net">中央大學 | ncu.igv@aiesec.net</option>
-                    <option value="taiwanyzu.igv@aiesec.net">元智大學 | taiwanyzu.igv@aiesec.net</option>
-                    <option value="taiwannthu.igv@aiesec.net">清華大學 | taiwannthu.igv@aiesec.net</option>
-                    <option value="igv.nctu@aiesec.net">交通大學 | igv.nctu@aiesec.net</option>
-                    <option value="aiesec.thu2@aiesec.net">東海大學 | aiesec.thu2@aiesec.net"</option>
-                    <option value="nchu.igv@aiesec.net">中興大學 | nchu.igv@aiesec.net</option>
-                    <option value="taiwan.fcu.igv@aiesec.net">逢甲大學 | taiwan.fcu.igv@aiesec.net</option>
-                    <option value="taiwanccu.igv@aiesec.net">中正大學 | taiwanccu.igv@aiesec.net</option>
-                    <option value="aiesecncku.igv@aiesec.net">成功大學 | aiesecncku.igv@aiesec.net</option>
-                    <option value="wzu@aiesec.net">文藻外語大學 | wzu@aiesec.net</option>
-                    <option value="aiesec.nsysu@aiesec.net">中山大學 | aiesec.nsysu@aiesec.net</option>
-                </select>
+                <input id="lc-mail" type="text" name="lc-mail" required placeholder="代表職稱">
             </div>
         </div>
         <div class="g-grid">
             <div class="g-block size-100 e-form-element">
-                <textarea rows="5" name="comments" required placeholder="您從事的產業、希望我們能如何協助您、請問您在尋找哪類型的國際志工?"></textarea>
+                <textarea rows="5" name="comments" required placeholder="您的組織簡介、希望我們能如何協助您、請問您在尋找哪類型的國際志工?"></textarea>
             </div>
         </div>
         <div class="g-grid">
             <div class="g-block size-100 e-form-submit">
-                <input type="submit" id="submit" name="submit" clicked="false" value="開始合作">
+                <input type="submit" id="submit" name="submit" clicked="false" value="提出合作申請">
             </div>
         </div>
     </form>
 
-    <!-- Form loading AJAX icon, needs to seperate to different file later -->
-    <div id="form-loading" style="display: none; position: absolute; top: 0%; width: 100%; height: 100%; background-color: rgba(0, 0, 0, .1);">
-        <div class="lds-css ng-scope" style="width: 200px; height: 200px; margin: auto; position: relative; top: 50%; transform: translateY(-50%);">
-            <div class="lds-spin" style="100%; height:100%;">
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-                <div>
-                    <div></div>
-                </div>
-            </div>
-            <style type="text/css">
-                @keyframes lds-spin {
-                    0% {
-                        opacity: 1;
-                        -webkit-transform: scale(1.1, 1.1);
-                        transform: scale(1.1, 1.1);
-                    }
-                    100% {
-                        opacity: 0;
-                        -webkit-transform: scale(1, 1);
-                        transform: scale(1, 1);
-                    }
-                }
-
-                @-webkit-keyframes lds-spin {
-                    0% {
-                        opacity: 1;
-                        -webkit-transform: scale(1.1, 1.1);
-                        transform: scale(1.1, 1.1);
-                    }
-                    100% {
-                        opacity: 0;
-                        -webkit-transform: scale(1, 1);
-                        transform: scale(1, 1);
-                    }
-                }
-
-                .lds-spin {
-                    position: relative;
-                }
-
-                .lds-spin div>div {
-                    position: absolute;
-                    width: 32px;
-                    height: 32px;
-                    border-radius: 50%;
-                    background: #037ef3;
-                    -webkit-animation: lds-spin 1s linear infinite;
-                    animation: lds-spin 1s linear infinite;
-                }
-
-                .lds-spin div:nth-child(1)>div {
-                    left: 144px;
-                    top: 84px;
-                    -webkit-animation-delay: -0.875s;
-                    animation-delay: -0.875s;
-                }
-
-                .lds-spin>div:nth-child(1) {
-                    -webkit-transform: rotate(0deg);
-                    transform: rotate(0deg);
-                    -webkit-transform-origin: 160px 100px;
-                    transform-origin: 160px 100px;
-                }
-
-                .lds-spin div:nth-child(2)>div {
-                    left: 126.42640685999999px;
-                    top: 126.42640685999999px;
-                    -webkit-animation-delay: -0.75s;
-                    animation-delay: -0.75s;
-                }
-
-                .lds-spin>div:nth-child(2) {
-                    -webkit-transform: rotate(45deg);
-                    transform: rotate(45deg);
-                    -webkit-transform-origin: 142.42640686px 142.42640686px;
-                    transform-origin: 142.42640686px 142.42640686px;
-                }
-
-                .lds-spin div:nth-child(3)>div {
-                    left: 84px;
-                    top: 144px;
-                    -webkit-animation-delay: -0.625s;
-                    animation-delay: -0.625s;
-                }
-
-                .lds-spin>div:nth-child(3) {
-                    -webkit-transform: rotate(90deg);
-                    transform: rotate(90deg);
-                    -webkit-transform-origin: 100px 160px;
-                    transform-origin: 100px 160px;
-                }
-
-                .lds-spin div:nth-child(4)>div {
-                    left: 41.57359314px;
-                    top: 126.42640685999999px;
-                    -webkit-animation-delay: -0.5s;
-                    animation-delay: -0.5s;
-                }
-
-                .lds-spin>div:nth-child(4) {
-                    -webkit-transform: rotate(135deg);
-                    transform: rotate(135deg);
-                    -webkit-transform-origin: 57.57359314px 142.42640686px;
-                    transform-origin: 57.57359314px 142.42640686px;
-                }
-
-                .lds-spin div:nth-child(5)>div {
-                    left: 24px;
-                    top: 84px;
-                    -webkit-animation-delay: -0.375s;
-                    animation-delay: -0.375s;
-                }
-
-                .lds-spin>div:nth-child(5) {
-                    -webkit-transform: rotate(180deg);
-                    transform: rotate(180deg);
-                    -webkit-transform-origin: 40px 100px;
-                    transform-origin: 40px 100px;
-                }
-
-                .lds-spin div:nth-child(6)>div {
-                    left: 41.57359314px;
-                    top: 41.57359314px;
-                    -webkit-animation-delay: -0.25s;
-                    animation-delay: -0.25s;
-                }
-
-                .lds-spin>div:nth-child(6) {
-                    -webkit-transform: rotate(225deg);
-                    transform: rotate(225deg);
-                    -webkit-transform-origin: 57.57359314px 57.57359314px;
-                    transform-origin: 57.57359314px 57.57359314px;
-                }
-
-                .lds-spin div:nth-child(7)>div {
-                    left: 84px;
-                    top: 24px;
-                    -webkit-animation-delay: -0.125s;
-                    animation-delay: -0.125s;
-                }
-
-                .lds-spin>div:nth-child(7) {
-                    -webkit-transform: rotate(270deg);
-                    transform: rotate(270deg);
-                    -webkit-transform-origin: 100px 40px;
-                    transform-origin: 100px 40px;
-                }
-
-                .lds-spin div:nth-child(8)>div {
-                    left: 126.42640685999999px;
-                    top: 41.57359314px;
-                    -webkit-animation-delay: 0s;
-                    animation-delay: 0s;
-                }
-
-                .lds-spin>div:nth-child(8) {
-                    -webkit-transform: rotate(315deg);
-                    transform: rotate(315deg);
-                    -webkit-transform-origin: 142.42640686px 57.57359314px;
-                    transform-origin: 142.42640686px 57.57359314px;
-                }
-
-                .lds-spin div:nth-child(9)>div {
-                    left: 144px;
-                    top: 84px;
-                    -webkit-animation-delay: 0.125s;
-                    animation-delay: 0.125s;
-                }
-
-                .lds-spin>div:nth-child(9) {
-                    -webkit-transform: rotate(360deg);
-                    transform: rotate(360deg);
-                    -webkit-transform-origin: 160px 100px;
-                    transform-origin: 160px 100px;
-                }
-
-                .lds-spin {
-                    width: 200px !important;
-                    height: 200px !important;
-                    -webkit-transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
-                    transform: translate(-100px, -100px) scale(1) translate(100px, 100px);
-                }
-            </style>
-        </div>
-    </div>
 
     <!-- Using ajaxForm to do process, suggest move to different file later -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" integrity="sha384-FzT3vTVGXqf7wRfy8k4BiyzvbNfeYjK+frTVqZeNDFl8woCbF0CYG6g2fMEFFo/i" crossorigin="anonymous"></script>
@@ -285,5 +104,6 @@
             };
             //jQuery('#igv-contact-form').ajaxForm(options);
         });
+
     </script>
 </div>
