--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -421,11 +421,9 @@
 
     <section>
         <div class="row">
-            <div class="container">
-                    <table class="table table-borderless fixed">
-                        <h1>
-                            聯絡我們
-                        </h1>
+            <div class="container-igv">
+                    <table class="table table-borderless fixed rwd-table">
+                        <h1>聯絡我們</h1>
                         <tr>
                             <td>
                                 <input class="form-control" id="org_name" maxlength="80" name="last_name" required size="20" type="text" placeholder="組織、校方代表姓名" oninvalid="this.setCustomValidity('務必填寫欄位')">
