--- a/joinUs.html
+++ b/joinUs.html
@@ -199,7 +199,7 @@
                         </div>
                         <div class="inner-content">
                             <h3 class="title">上學期|成員階段｜影響力的開始</h3>
-                            <p class="description">加入AIESEC部門成為團隊一員後，你將在專案運行過程中體驗工作轉速快的學習環境。 部門專案運行中，不僅是增進專業能力與團隊合作能力，亦是摸索自我潛能，並透過團隊的交流互相給予回饋，磨練自己同時幫助他人成長。</p>
+                            <p class="description">加入AIESEC部門成為團隊一員後，你將部門專案執行過程中<br>增進專業能力與團隊合作能力。</p>
                         </div>
                     </a>
                 </div>
@@ -210,7 +210,7 @@
                         </div>
                         <div class="inner-content">
                             <h3 class="title">寒暑假|探索｜更大的世界與自己</h3>
-                            <p class="description">寒暑假將有機會爭取跨文化交流機會，與當地AIESEC共同完成6-8週議題專案。或參與全國領導力會議，與全台16分會及其他國家AIESEC成員交流，共同討論青年影響力。</p>
+                            <p class="description">寒暑假將有機會爭取跨文化交流機會，包含海外成長或全國領導力會議<br>與全台分會及其他國家AIESEC成員交流，共同討論青年影響力。</p>
                         </div>
                     </a>
                 </div>
@@ -221,7 +221,7 @@
                         </div>
                         <div class="inner-content">
                             <h3 class="title">下學期|中階幹部｜專業的成長與反思</h3>
-                            <p class="description">下學期成為中階幹部，將能參與分會內及全國性培訓會議，並獨立帶領團隊或獨立完成專案。在領導過程中，你將練習獨自面對挑戰，磨練堅持而正向的心態，練習引導與帶領團隊朝向共同目標。</p>
+                            <p class="description">下學期成為儲備幹部，獨立帶領團隊或獨立完成專案，並由核心團隊給予回饋，並有機會參與全國與分會內幹部培訓。</p>
                         </div>
                     </a>
                 </div>
@@ -232,7 +232,7 @@
                         </div>
                         <div class="inner-content">
                             <h3 class="title">新學年|部門領導者｜領導者的影響力與韌性</h3>
-                            <p class="description">成為部門領導者，你將與全國16分會的部門領導者組成全國團隊，共同決策AIESEC台灣部門方向。 過程中不只磨練管理能力、邏輯思辨 與 複雜問題解決能力。並有一群台灣各處的志同道合團隊，一同實踐心中的理想，對他人與世界產生影響力。</p>
+                            <p class="description">部門領導者將同時擔任分會執行團隊及全國部門團隊，共同決策分會<br>及AIESEC台灣部門方向。</p>
                         </div>
                     </a>
                 </div>
@@ -260,7 +260,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">1.參加校園說明會</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">？</p>
+<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -271,7 +271,7 @@
 
                         <h3 class="mb-3">2.填寫申請書</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">？</p>
+<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -281,7 +281,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">3.分會徵選、面試</h3>
                         <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">？</p>
+<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -291,13 +291,14 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">4.參與全國新生大會</h3>
                         <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">？</div>
+<!--                        <div class="text-muted mb-0 line-height-35 section-text">？</div>-->
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+<!--
 
     <section id="faq" class=" section-grbacolor">
         <div class="container">
@@ -311,6 +312,7 @@
         </div>
 
     </section>
+-->
     <section id=apply class="section-applybacolor">
         <div class="section-applybacolor">
             <div class="container">
