0907 index landing photo

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
                         <img src="img/leadership.png" class="fas fa-4x text-primary mb-3 " width="45%" height="45%">
                     </div>
-                    <div class="service-box mt-5 mx-auto，">
+                    <div class="service-box mt-5 mx-auto">
 
                         <h3 class="mb-3">獨特領導力培訓計畫</h3>
                         <hr class="gray">
