--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=yes"/>
 
     <title>AIESEC in Taiwan</title>
 
@@ -85,7 +87,7 @@
                             <a href="Incoming%20Volunteer.html" class="collapse-font">NGO 合作</a><br>
                             <a href="#" class="collapse-font">企業合作</a>
 
-                          <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                          <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a><br>
                             <a href="#" class="collapse-font">全球人才實習</a>
 
                         </div>
