--- a/Incoming Volunteer.html
+++ b/Incoming Volunteer.html
@@ -46,6 +46,7 @@
 <body id="page-top">
 
     <!-- Navigation -->
+      <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <div class="navbar-brand js-scroll-trigger" href="index.html">
@@ -62,7 +63,8 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration1" role="button" aria-expanded="false" aria-controls="colaboration">
+                            青年參與計畫 <i class="fa fa-caret-down"></i>&nbsp;&nbsp;&nbsp;</a>
                     </li>
 
                     <div class="collapse" id="colaboration1">
@@ -75,15 +77,19 @@
                     </div>
 
                     <li class="collapse-trigger">
-                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">組織合作機會 <i class="fa fa-caret-down"></i></a>
+                        <a class="collapse-trigger" data-toggle="collapse" href="#colaboration" role="button" aria-expanded="false" aria-controls="colaboration">
+                            組織合作機會 <i class="fa fa-caret-down"></i></a>
                     </li>
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                            <a href="Incoming%20Volunteer.html" class="collapse-font">NGO 合作</a><br>
-                            <a href="incomingTalent.html" class="collapse-font">企業合作</a>
+                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                            <a href="incomingTalent.html" class="collapse-font">全球人才實習</a>
                         </div>
                     </div>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="https://aiesec.org/search" target="_blank">尋找適合專案</a>
