--- a/OutGoing Volunnter.html
+++ b/OutGoing Volunnter.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0, user-scalable=yes"/>
 
 
     <!--    rwd-->
@@ -47,7 +49,7 @@
     <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/airtable@0.6.0/lib/airtable.min.js'></script>
-    
+
 
 
 </head>
@@ -57,12 +59,12 @@
 
 <body id="page-top">
 
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <div class="navbar-brand js-scroll-trigger" href="index.html">
                 <div style="width: 150px">
-                   <a href="index.html">
-                    <img src="img/logo_290x60.png" class="nav-logo">
+                    <a href="index.html">
+                        <img src="img/logo_290x60.png" class="nav-logo">
                     </a>
                 </div>
             </div>
@@ -93,9 +95,8 @@
 
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
-                         <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
-                            <a href="#" class="collapse-font">全球人才實習</a>
-                        </div>
+                            <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
+                            <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a> </div>
                     </div>
                     <li class="nav-item dropdown">
                         <a class="nav-link js-scroll-trigger" href="joinUs.html" target="_blank" sytle="color=white">加入我們·秋季徵才</a>
@@ -127,7 +128,7 @@
                         <!--                        即便再微小的行動，都能在他人的心中種下改變的種子<br><br>而我們都能成為影響力的散播者-->
                     </p>
 
-                    <a class="btn btn-xl js-scroll-trigger btn-header btn-mobile" href="#video">瀏覽精選志工專案</a>
+<!--                    <a class="btn btn-xl js-scroll-trigger btn-header btn-mobile" href="#video">瀏覽精選志工專案</a>-->
                 </div>
             </div>
 
@@ -253,58 +254,60 @@
             </div>
         </div>
         <!-- AIESEC所提供的-->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.5s">我們為您準備好的</p>
+        <div class="section-grbacolor">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p class="section-heading wow fadeInDown section-title" data-wow-delay="0.5s">我們為您準備好的</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <br>
-        <div class="wow fadeInDown" style="animation-duration: 1.5s">
-            <p style="text-align: center" class="container sdg-font">我們的團隊將確保所有參與專案的青年有最好的支援。</p>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+            <br>
+            <div class="wow fadeInDown" style="animation-duration: 1.5s">
+                <p style="text-align: center" class="container sdg-font">我們的團隊將確保所有參與專案的青年有最好的支援。</p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">安全的生活條件</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">您將在辦理保險後收到有關住宿和基本生活開銷的資訊。</p>
+                        </div>
                     </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">安全的生活條件</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">您將在辦理保險後收到有關住宿和基本生活開銷的資訊。</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
-                    </div>
-                    <div class="service-box mt-2 mx-auto">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
 
-                        <h3 class="mb-3">良好的學習環境</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">設定明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                            <h3 class="mb-3">良好的學習環境</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">設定明確的目標,讓您了解當地文化，在專案之前提供訓練課程。</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">清楚的工作說明</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">我們將陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
+                        </div>
                     </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">清楚的工作說明</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們將陪同您到專案地點，確保您的專案與合約上的條件描述一致。</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
-                    </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">實質上的幫助</h3>
-                        <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證及接送機資訊。</div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">實質上的幫助</h3>
+                            <hr class="gray">
+                            <div class="text-muted mb-0 line-height-35 section-text">在您出發參與專案之前，我們確保您辦理正確的簽證及接送機資訊。</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -354,7 +357,7 @@
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png"  class="footer-logo">
+            <img src="img/aiesec%20logo.png" class="footer-logo">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
@@ -427,7 +430,6 @@
 
     <script>
         new WOW().init();
-
     </script>
     <script>
         var Airtable = require('airtable');
@@ -445,12 +447,9 @@
                 `<a>${record.fields.ogv_data_title}</a>`
             );
             $('#info-ogv').append(
-                `<a>${record.fields.ogv_data_info}</a>`
+                `<a class="mb-5">${record.fields.ogv_data_info}</a>`
             );
         });
-
     </script>
 
-</body>
-
-</html>
+</body></html>
