--- a/Outgoing Entrepreneur.html
+++ b/Outgoing Entrepreneur.html
@@ -87,7 +87,7 @@
                     <div class="collapse" id="colaboration">
                         <div class="collaspe-body">
                             <a href="Incoming%20Volunteer.html" class="collapse-font">全球青年在地發展</a><br>
-                            <a href="#" class="collapse-font">全球人才實習</a>
+                            <a href="incomingTalent.html" class="collapse-font">全球青年在地發展</a>
                         </div>
                     </div>
                     <li class="nav-item dropdown">
@@ -117,7 +117,7 @@
                         <!--                       Global Entrepreneur is an internship experience where young people can explore<br><br>learn and contribute to the entrepreneurial world.-->
                     </p>
                     <br><br><br>
-<!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
+                    <!--                    <a align=left class="btn btn-primary btn-xl js-scroll-trigger btn-mobile" href="#video">了解更多</a>-->
                 </div>
             </div>
             <br>
@@ -239,59 +239,62 @@
                 </div>
             </div>
         </div>
+
         <!-- AIESEC所會提供的-->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p class="section-heading wow fadeInDown section-title">我們為你準備好的</p>
+        <div class="section-grbacolor">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p class="section-heading wow fadeInDown section-title">我們為你準備好的</p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <br>
-        <div class="wow fadeInDown" style="animation-duration: 1.5s">
-            <p style="text-align: center" class="container sdg-font">我們的團隊將確保所有參與專案的青年有最好的支援。</p>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+            <br>
+            <div class="wow fadeInDown" style="animation-duration: 1.5s">
+                <p style="text-align: center" class="container sdg-font">我們的團隊將確保所有參與專案的青年有最好的支援。</p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Safe-Living-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">當地生活協助</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">我們將協助提供住宿方案和基本生活開銷的資訊</p>
+                        </div>
                     </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">當地生活協助</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們將協助提供住宿方案和基本生活開銷的資訊</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
-                    </div>
-                    <div class="service-box mt-2 mx-auto">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Learning-Experience-495x400.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
 
-                        <h3 class="mb-3">良好的學習環境</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">我們設定了明確的目標,讓您了解當地文化和工作環境</p>
+                            <h3 class="mb-3">良好的學習環境</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">我們設定了明確的目標,讓您了解當地文化和工作環境</p>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Clear-JD.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">清楚的工作保障</h3>
+                            <hr class="gray">
+                            <p class="text-muted mb-0 line-height-35 section-text">第一天將由當地的實習生夥伴陪同您到專案地點，確保您的專案與合約上的條件描述一致</p>
+                        </div>
                     </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">清楚的工作保障</h3>
-                        <hr class="gray">
-                        <p class="text-muted mb-0 line-height-35 section-text">第一天將由當地的實習生夥伴陪同您到專案地點，確保您的專案與合約上的條件描述一致</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
-                        <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
-                    </div>
-                    <div class="service-box mt-2 mx-auto">
-                        <h3 class="mb-3">專人服務</h3>
-                        <hr class="gray">
-                        <div class="text-muted mb-0 line-height-35 section-text">在您申請流程當中，我們協助您做面試與履歷的相關準備並提供當地簽證資訊</div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="service-box mt-5 mx-auto wow fadeIn" data-wow-delay="0.5s">
+                            <img src="img/Logistic-Support.png" class="fas fa-4x text-primary mb-3 " width="75%" height="75%">
+                        </div>
+                        <div class="service-box mt-2 mx-auto">
+                            <h3 class="mb-3">專人服務</h3>
+                            <hr class="gray">
+                            <div class="text-muted mb-0 line-height-35 section-text">在您申請流程當中，我們協助您做面試與履歷的相關準備並提供當地簽證資訊</div>
+                        </div>
                     </div>
                 </div>
             </div>
