--- a/joinUs.html
+++ b/joinUs.html
@@ -259,6 +259,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">1.參加校園說明會</h3>
                         <hr class="gray">
+                        <a class="js-scroll-trigger" href="#form"><buttom class="btn btn-primary">報名徵才說明會</buttom></a>
 <!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
@@ -280,7 +281,7 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">3.分會徵選、面試</h3>
                         <hr class="gray">
-<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
+                        <p class="text-muted mb-0 line-height-35 section-text">透過面試確認您是否為AIESEC所需要的人才！</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -290,7 +291,9 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">4.參與全國新生大會</h3>
                         <hr class="gray">
-<!--                        <div class="text-muted mb-0 line-height-35 section-text">？</div>-->
+                        <p class="text-muted mb-0 line-height-35 section-text">在新生大會中，您將學習AIESEC基本價值與理念</p>
+                     
+
                     </div>
                 </div>
             </div>
@@ -312,13 +315,13 @@
 
     </section>
 -->
-    <section id=apply class="section-applybacolor">
+    <section id="form" class="section-applybacolor">
         <div class="section-applybacolor">
             <div class="container">
                 <div class="col-lg-12 text-center">
                     <p class="section-heading wow fadeInDown section-title">報名開始您的旅程</p>
                 </div>
-                <iframe src="ogv_info_session_form.html" width="100%" height="600px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="recruitment_info_session_form.html" width="100%" height="600px" frameborder="0" scrolling="yes"></iframe>
             </div>
 
         </div>
