--- a/incomingTalent.html
+++ b/incomingTalent.html
@@ -386,8 +386,7 @@
 
 
     <!-- The content of your page would go here. -->
-
-    <footer class="footer-distributed" id=contact>
+   <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
@@ -424,7 +423,7 @@
 
             <div>
                 <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@company.com">taiwan@aiesec.net</a></p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=taiwan@aiesec.net" target="_blank">taiwan@aiesec.net</a></p>
             </div>
 
         </div>
