--- a/index.html
+++ b/index.html
@@ -424,34 +424,34 @@
     </div>
 
 
-    <footer class="footer-distributed" id=contact>
+   <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" class="footer-logo">
+            <img src="img/aiesec%20logo.png" height="30%" width="30%">
 
-            <p class="footer-links nav-font">
-                <a href="#">首頁</a>
+            <p class="footer-links microfont">
+                <a href="index.html">首頁</a>
                 ·
-                <a href="#about">AIESEC</a>
+                <a href="#">AIESEC</a>
                 ·
-                <a href="#">專案說明</a>
+                <a href="#services">專案說明</a>
                 ·
-                <a href="OutGoing%20Volunnter.html">海外成長</a>
+                <a href="indexOGV.html">海外成長</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外實習</a>
+                <a href="#">海外實習</a>
                 ·
-                <a href="Outgoing%20Entrepreneur.html">海外青創</a>
+                <a href="indexOGE.html">海外青創</a>
             </p>
 
             <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
         </div>
 
-        <div class="footer-center nav-font">
+        <div class="footer-center microfont">
 
             <div>
-                <i class="fa fa-map-marker nav-font"></i>
-                <p>新北市板橋區莒光路52號2樓之一</p>
+                <i class="fa fa-map-marker microfont"></i>
+                <p>新北市板橋區莒光路52號之一</p>
             </div>
 
             <div>
@@ -461,7 +461,7 @@
 
             <div>
                 <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@company.com">taiwan@aiesec.net</a></p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=taiwan@aiesec.net" target="_blank">taiwan@aiesec.net</a></p>
             </div>
 
         </div>
@@ -483,6 +483,7 @@
             </div>
 
         </div>
+
 
     </footer>
 
