--- a/Outgoing Talent.html
+++ b/Outgoing Talent.html
@@ -343,7 +343,7 @@
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" class="footer-logo">
+            <img src="img/aiesec%20logo.png" height="30%" width="30%">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
@@ -352,11 +352,11 @@
                 ·
                 <a href="#services">專案說明</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外成長</a>
+                <a href="indexOGV.html">海外成長</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外實習</a>
+                <a href="#">海外實習</a>
                 ·
-                <a href="Outgoing%20Entrepreneur.html">海外青創</a>
+                <a href="indexOGE.html">海外青創</a>
             </p>
 
             <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
@@ -366,7 +366,7 @@
 
             <div>
                 <i class="fa fa-map-marker microfont"></i>
-                <p>新北市板橋區莒光路52號2樓之一</p>
+                <p>新北市板橋區莒光路52號之一</p>
             </div>
 
             <div>
@@ -376,7 +376,7 @@
 
             <div>
                 <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@company.com">taiwan@aiesec.net</a></p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=taiwan@aiesec.net" target="_blank">taiwan@aiesec.net</a></p>
             </div>
 
         </div>
