--- a/joinUs.html
+++ b/joinUs.html
@@ -151,10 +151,10 @@
                     </div>
                     <div class="service-box mt-5 mx-auto">
                         <h2 class="mb-3">團隊實務經驗
-</h2>
+                        </h2>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">與團隊達成共同目標<br>並爭取團隊領導或管理經驗
-</p>
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
@@ -259,8 +259,10 @@
                     <div class="service-box mt-2 mx-auto">
                         <h3 class="mb-3">1.參加校園說明會</h3>
                         <hr class="gray">
-                        <a class="js-scroll-trigger" href="#form"><buttom class="btn btn-primary">報名徵才說明會</buttom></a>
-<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
+                        <a href="recruitment_info_session_form.html" onclick="window.open(this.href, 'mywin','left=20,top=20,width=600,height=650,toolbar=1,resizable=0'); return false;">
+                            <buttom class="btn btn-primary">報名徵才說明會</buttom>
+                        </a>
+                        <!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -271,7 +273,10 @@
 
                         <h3 class="mb-3">2.填寫申請書</h3>
                         <hr class="gray">
-<!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
+                        <a class="js-scroll-trigger" href="#form">
+                            <buttom class="btn btn-primary">填寫徵才申請書</buttom>
+                        </a>
+                        <!--                        <p class="text-muted mb-0 line-height-35 section-text">？</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -292,7 +297,7 @@
                         <h3 class="mb-3">4.參與全國新生大會</h3>
                         <hr class="gray">
                         <p class="text-muted mb-0 line-height-35 section-text">在新生大會中，您將學習AIESEC基本價值與理念</p>
-                     
+
 
                     </div>
                 </div>
@@ -300,7 +305,7 @@
         </div>
     </section>
 
-<!--
+    <!--
 
     <section id="faq" class=" section-grbacolor">
         <div class="container">
@@ -321,18 +326,18 @@
                 <div class="col-lg-12 text-center">
                     <p class="section-heading wow fadeInDown section-title">報名開始您的旅程</p>
                 </div>
-                <iframe src="recruitment_info_session_form.html" width="100%" height="600px" frameborder="0" scrolling="yes"></iframe>
+                <iframe src="recruitment_regist_form.html" width="100%" height="1200px" frameborder="0" scrolling="yes"></iframe>
             </div>
 
         </div>
     </section>
     <!-- The content of your page would go here. -->
 
-    <footer class="footer-distributed" id=contact>
+   <footer class="footer-distributed" id=contact>
 
         <div class="footer-left">
 
-            <img src="img/aiesec%20logo.png" class="footer-logo">
+            <img src="img/aiesec%20logo.png" height="30%" width="30%">
 
             <p class="footer-links microfont">
                 <a href="index.html">首頁</a>
@@ -341,11 +346,11 @@
                 ·
                 <a href="#services">專案說明</a>
                 ·
-                <a href="OutGoing%20Volunnter.html">海外成長</a>
+                <a href="indexOGV.html">海外成長</a>
                 ·
-                <a href="Outgoing%20Talent.html">海外實習</a>
+                <a href="#">海外實習</a>
                 ·
-                <a href="Outgoing%20Entrepreneur.html">海外青創</a>
+                <a href="indexOGE.html">海外青創</a>
             </p>
 
             <p class="footer-company-name">AIESEC in Taiwan&copy; 2018</p>
@@ -365,7 +370,7 @@
 
             <div>
                 <i class="fa fa-envelope"></i>
-                <p><a href="mailto:support@company.com">taiwan@aiesec.net</a></p>
+                <p><a href="https://mail.google.com/mail/?view=cm&fs=1&to=taiwan@aiesec.net" target="_blank">taiwan@aiesec.net</a></p>
             </div>
 
         </div>
@@ -388,6 +393,7 @@
 
         </div>
 
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
@@ -405,7 +411,6 @@
 
     <script>
         new WOW().init();
-
     </script>
     <script>
         var Airtable = require('airtable');
@@ -426,9 +431,6 @@
                 `<a>${record.fields.ogv_data_info}</a>`
             );
         });
-
     </script>
 
-</body>
-
-</html>
+</body></html>
