--- a/recruitment_info_session_form.html
+++ b/recruitment_info_session_form.html
@@ -324,7 +324,7 @@
                 console.log(value);
 
                 $('#event').append(
-                    `<option>${value}</option> <br>`
+                      `<option value="${index}">${value}</option> <br>`
                 )
 
             });
