--- a/oge_regist_form.html
+++ b/oge_regist_form.html
@@ -191,10 +191,7 @@
 
                 </table>
                 <!-- hidden values -->
-                <input type="hidden" name="website_url" value="{website_url}">
-                <div id="error" class="error">
-                    <p></p>
-                </div>
+<!--                <input type="hidden" name="website_url" value="{website_url}">-->
                 <input name="rating" type="hidden" value="Warm">
                 <input name="00N70000002UFkn" type="hidden" value="OGX GIP">
                 <input name="00N70000002ULec" type="hidden" value="1">
