--- a/oge_info_session_form.html
+++ b/oge_info_session_form.html
@@ -299,7 +299,7 @@
                 <!--    hidden value-->
 
                 <input name="oid" type="hidden" value="00D70000000IhvY" />
-                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/%E5%80%8B%E4%BA%BA%E5%8F%83%E8%88%87%E5%B0%88%E6%A1%88/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5-%E5%AE%8C%E6%88%90%E5%A0%B1%E5%90%8D/" />
+<!--                <input name="retURL" type="hidden" value="https://www.aiesec.org.tw/%E5%80%8B%E4%BA%BA%E5%8F%83%E8%88%87%E5%B0%88%E6%A1%88/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5/%E6%B5%B7%E5%A4%96%E9%9D%92%E5%89%B5-%E5%AE%8C%E6%88%90%E5%A0%B1%E5%90%8D/" />-->
                 <input name="rating" type="hidden" value="Warm" />
                 <input name="00N70000002UFkn" type="hidden" value="OGE" />
 
