--- a/ogv_regist_form.html
+++ b/ogv_regist_form.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>秋季徵才</title>
+    <title>申請海外成長</title>
 
     <!--    css for this page-->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,8 @@
         <div class="container">
 
 
-            <form action="{path-gis_reg_process}" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
+
+            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
 
 
 
@@ -98,14 +99,6 @@
                             </select>
                         </td>
                         <td>
-                            <input id="00N70000002UZD1" class="form-control" type="text" name="00N70000002UZD1" maxlength="255" required oninvalid="this.setCustomValidity('輸入語言能力相關證明')" oninput="setCustomValidity('')" placeholder="語言能力相關證明，並請按照Basic, Good, Excellent, Native四個標準判斷你的外語能力">
-                        </td>
-                    </tr>
-
-                    <!--                    入學年、畢業年-->
-
-                    <tr>
-                        <td>
                             <select class="form-control" id="00N70000002UGB9" name="00N70000002UGB9" title="University/College/School Entrance Year">
                                 <option selected="selected">入學年</option>
                                 <option value="2019">2019</option>
@@ -116,17 +109,6 @@
                                 <option value="2014">2014</option>
                             </select>
                         </td>
-                        <td>
-                            <select class="form-control" id="00N70000003DcRu" name="00N70000003DcRu" title="University/College/School Graduate Year">
-                                <option selected="selected">（預計）畢業年度</option>
-                                <option value="2023">2023</option>
-                                <option value="2022">2022</option>
-                                <option value="2021">2021</option>
-                                <option value="2020">2020</option>
-                                <option value="2019">2019</option>
-                                <option value="2018">2018</option>
-                            </select>
-                        </td>
                     </tr>
 
 
@@ -134,140 +116,44 @@
 
                     <tr>
                         <td>
-                            <select class="form-control" id="00N70000003D1au" name="00N70000003D1au" title="oGIP Motivation">
-                                <option selected="selected">什麼因素會讓你想要參加海外青創實習計劃?</option>
-                                <option value="海外工作經驗增加履歷競爭力 (Overseas work experience to improve resume)">海外工作經驗增加履歷競爭力 (Overseas work experience to improve resume)</option>
-                                <option value="擁有與異國同事共事經驗 (Experience work with diverse nationalities)">擁有與異國同事共事經驗 (Experience work with diverse nationalities)</option>
-                                <option value="支薪外又能獲得實作經驗 (Practical Work Experience)">支薪外又能獲得實作經驗 (Practical Work Experience)</option>
-                                <option value="異國文化體驗及交流 (Culture exposure)">異國文化體驗及交流 (Culture exposure)</option>
-                                <option value="提升自身的外語能力 (Enhance foreign language skills)">提升自身的外語能力 (Enhance foreign language skills)</option>
-                                <option value="培養個人的國際視野 (Develop international perspective)">培養個人的國際視野 (Develop international perspective)</option>
-                                <option value="實習國家為開發中國家 (Internship in developing countries)">實習國家為開發中國家 (Internship in developing countries)</option>
-                                <option value="實習公司的規模大小 (Company size)">實習公司的規模大小 (Company size)</option>
-                                <option value="成為世界需要的領袖 (Becoming a leader that the world needs)">成為世界需要的領袖 (Becoming a leader that the world needs)</option>
+                            <select id="Information_Channel__c" title="Information Channel" name="00N70000002UFlz[]" required="" class="form-control">
+                                <option selected="selected">請問你是從何處決定報名海外成長的呢?</option>
+                                <option name="00N70000002UFlz[]" value="AIESEC官方網站">AIESEC官方網站</option>
+                                <option name="00N70000002UFlz[]" value="AIESEC in Taiwan粉絲專頁">AIESEC in Taiwan粉絲專頁</option>
+                                <option name="00N70000002UFlz[]" value="海外成長計畫粉絲專頁">海外成長計畫粉絲專頁</option>
+                                <option name="00N70000002UFlz[]" value="AIESEC分會粉絲專頁">AIESEC分會粉絲專頁</option>
+                                <option name="00N70000002UFlz[]" value="Facebook廣告">Facebook廣告</option>
+                                <option name="00N70000002UFlz[]" value="親朋好友介紹">親朋好友介紹</option>
+                                <option name="00N70000002UFlz[]" value="海報">海報</option>
+                                <option name="00N70000002UFlz[]" value="宣傳單">宣傳單/三摺頁</option>
+                                <option name="00N70000002UFlz[]" value="校園擺攤">校園擺攤</option>
+                                <option name="00N70000002UFlz[]" value="學校單位">學校單位</option>
+                                <option name="00N70000002UFlz[]" value="學校臉書社團">學校臉書社團</option>
+                                <option name="00N70000002UFlz[]" value="曾經參與過AIESEC舉辦的活動">曾經參與過AIESEC舉辦的活動</option>
+                                <option name="00N70000002UFlz[]" value="看過AIESEC宣傳影片">看過AIESEC宣傳影片</option>
+                                <option name="00N70000002UFlz[]" value="其他">其他</option>
                             </select>
                         </td>
-                        <td>
-                            <select class="form-control" id="00N70000003D1az" name="00N70000003D1az" title="oGIP Decision Channel">
-                                <option selected="selected">在你做決定時，哪些管道會影響你比較多?</option>
-                                <option value="人力銀行的就業趨勢 (Insights from External Trends)">人力銀行的就業趨勢 (Insights from External Trends)</option>
-                                <option value="名人推薦(教授、專業人士) (Recommended by someone credible; Professor, Company executives, etc)">名人推薦(教授、專業人士) (Recommended by someone reputable)</option>
-                                <option value="親朋好友推薦 (Recommendation from friends or family)">親朋好友推薦 (Recommendation from friends or family)</option>
-                                <option value="facebook粉絲專頁 (Our Facebook Page/Post)">facebook粉絲專頁 (Our Facebook Page/Post)</option>
-                                <option value="PTT 相關版">PTT 相關版 (PTT)</option>
-                                <option value="學校公告/Email校內信(EX:職涯中心電子報) (School Notice Board or Email)">學校公告/Email校內信(EX:職涯中心電子報) (School Notice Board or Email)</option>
-                                <option value="廣告宣傳單與海報 (Flyers or Posters)">廣告宣傳單與海報 (Flyers or Posters)</option>
-                                <option value="職涯說明會 (Information Seminar)">職涯說明會 (Information Seminar)</option>
-                            </select>
-                        </td>
+
                     </tr>
 
-
-                    <!--                    influence Life Plan-->
-                    <tr>
-                        <td>
-                            <select class="form-control" id="00N70000003D1az" name="00N70000003D1az" title="oGIP Decision Channel">
-                                <option selected="selected">在你做決定時，哪些管道會影響你比較多?</option>
-                                <option value="人力銀行的就業趨勢 (Insights from External Trends)">人力銀行的就業趨勢 (Insights from External Trends)</option>
-                                <option value="名人推薦(教授、專業人士) (Recommended by someone credible; Professor, Company executives, etc)">名人推薦(教授、專業人士) (Recommended by someone reputable)</option>
-                                <option value="親朋好友推薦 (Recommendation from friends or family)">親朋好友推薦 (Recommendation from friends or family)</option>
-                                <option value="facebook粉絲專頁 (Our Facebook Page/Post)">facebook粉絲專頁 (Our Facebook Page/Post)</option>
-                                <option value="PTT 相關版">PTT 相關版 (PTT)</option>
-                                <option value="學校公告/Email校內信(EX:職涯中心電子報) (School Notice Board or Email)">學校公告/Email校內信(EX:職涯中心電子報) (School Notice Board or Email)</option>
-                                <option value="廣告宣傳單與海報 (Flyers or Posters)">廣告宣傳單與海報 (Flyers or Posters)</option>
-                                <option value="職涯說明會 (Information Seminar)">職涯說明會 (Information Seminar)</option>
-                            </select>
-                        </td>
-                        <td>
-                            <input id="00N70000003D1b4" class="form-control" type="text" name="00N70000003D1b4" maxlength="255" required oninvalid="this.setCustomValidity('輸入您的想法')" oninput="setCustomValidity('')" placeholder="請跟我們分享您畢業後十年內的人生規劃，讓我們更加知道如何協助您?">
-                        </td>
-                    </tr>
                     <tr>
                         <td colspan="2" align="center">
-                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外青創報名表">
+                            <input type="submit" id="submit_button" name="submit" clicked="false" class="btn btn-primary" value="繳交海外成長報名表">
                         </td>
                     </tr>
 
 
 
                 </table>
+
+                <!-- hidden values -->
+                <input type="hidden" name="">
+                <input type="hidden" name="rating" value="Warm">
+                <input type="hidden" name="00N70000002UFkn" value="OGX GCDP">
+                <input type="hidden" name="00N70000002ULec" value="1">
+                <input type="hidden" name="lead_source" value="Global Volunteer">
             </form>
         </div>
     </div>
 </body></html>
-
-
-            <form action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="regform" id="oge-regist-form" accept-charset="UTF-8" style="transform:0.4s;">
-
-
-    <input id="last_name" class="input" type="text" maxlength="50" name="last_name" required oninvalid="this.setCustomValidity('輸入您的中文姓氏')" oninput="setCustomValidity('')" placeholder="姓氏">
-    <input id="first_name" class="input" type="text" name="first_name" maxlength="50" required oninvalid="this.setCustomValidity('輸入您的中文名字')" oninput="setCustomValidity('')" placeholder="名字">
-    <input id="english_last_name" class="input" type="text" maxlength="50" name="english_last_name" required oninvalid="this.setCustomValidity('輸入您護照上的英文姓氏')" oninput="setCustomValidity('')" placeholder="護照上的英文姓氏">
-    <input id="english_first_name" class="input" type="text" name="english_first_name" maxlength="50" required oninvalid="this.setCustomValidity('輸入您護照上的英文名字')" oninput="setCustomValidity('')" placeholder="護照上的英文名字">
-    <input id="email" class="input" type="text" name="email" maxlength="50" required oninvalid="this.setCustomValidity('請輸入有效的電子郵件')" oninput="setCustomValidity('')" pattern="^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$" placeholder="電子郵件">
-    <input id="phone" class="input" type="text" name="phone" maxlength="50" required oninvalid="this.setCustomValidity('輸入一個有效的電話號碼, 格式：扣掉0，如960650075，共9碼')" oninput="setCustomValidity('')" pattern="(?:9)[0-9]{8}" placeholder="電話號碼 (格式：扣掉0，如960650075，共9碼)">
-    <input id="password" class="input" type="password" name="password" required oninvalid="this.setCustomValidity('密碼必須至少8個字符，一個數字，一個大寫字母和一個小寫字母')" oninput="setCustomValidity('')" pattern="(?=^.{8,}$)^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" placeholder="密碼">
-
-    <select id="Gender__c" name="00N70000002U9LK" title="Gender">
-        <option selected="selected">性別</option>
-        <option value="Male">生理男</option>
-        <option value="Female">生理女</option>
-    </select>
-
-    <select id="00N70000002UFkc" name="00N70000002UFkc" title="大專院校">
-        <option selected="selected">大專院校</option>
-        {leads-option-list}
-    </select>
-
-    <input class="readonly" id="localcommittee" name="localcommittee" title="指定分會" type="text" placeholder="指定分會(自動選擇)" readonly>
-    <input id="Bachelor_Major_Name__c" class="input" type="text" name="Bachelor_Major_Name__c" maxlength="50" required oninvalid="this.setCustomValidity('輸入您的大專院校主修及副修科系')" oninput="setCustomValidity('')" placeholder="大專院校主修及副修科系">
-
-    <select id="00N70000002UFlp" name="00N70000002UFlp" title="Current/Final Degree">
-        <option selected="selected">現在或最終學位</option>
-        <option value="Bachelor">Bachelor 大專院校</option>
-        <option value="Master">Master 碩士</option>
-        <option value="Doctor">Doctor 博士</option>
-    </select>
-
-    <select id="00N70000002UGB9" name="00N70000002UGB9" title="University/College/School Entrance Year">
-        <option selected="selected">入學年</option>
-        <option value="2019">2019</option>
-        <option value="2018">2018</option>
-        <option value="2017">2017</option>
-        <option value="2016">2016</option>
-        <option value="2015">2015</option>
-        <option value="2014">2014</option>
-    </select>
-
-    <input id="00N70000003CuDe" class="input" type="text" name="00N70000003CuDe" maxlength="70" required oninvalid="this.setCustomValidity('輸入一個有效的Facebook 名稱, Example: 古淮語')" oninput="setCustomValidity('')" placeholder="Facebook 名稱, Example: 古淮語">
-
-    <select id="Information_Channel__c" title="Information Channel" name="00N70000002UFlz[]" required="">
-        <option selected="selected">請問你是從何處決定報名海外成長的呢?</option>
-        <option name="00N70000002UFlz[]" value="AIESEC官方網站">AIESEC官方網站</option>
-        <option name="00N70000002UFlz[]" value="AIESEC in Taiwan粉絲專頁">AIESEC in Taiwan粉絲專頁</option>
-        <option name="00N70000002UFlz[]" value="海外成長計畫粉絲專頁">海外成長計畫粉絲專頁</option>
-        <option name="00N70000002UFlz[]" value="AIESEC分會粉絲專頁">AIESEC分會粉絲專頁</option>
-        <option name="00N70000002UFlz[]" value="Facebook廣告">Facebook廣告</option>
-        <option name="00N70000002UFlz[]" value="親朋好友介紹">親朋好友介紹</option>
-        <option name="00N70000002UFlz[]" value="海報">海報</option>
-        <option name="00N70000002UFlz[]" value="宣傳單">宣傳單/三摺頁</option>
-        <option name="00N70000002UFlz[]" value="校園擺攤">校園擺攤</option>
-        <option name="00N70000002UFlz[]" value="學校單位">學校單位</option>
-        <option name="00N70000002UFlz[]" value="學校臉書社團">學校臉書社團</option>
-        <option name="00N70000002UFlz[]" value="曾經參與過AIESEC舉辦的活動">曾經參與過AIESEC舉辦的活動</option>
-        <option name="00N70000002UFlz[]" value="看過AIESEC宣傳影片">看過AIESEC宣傳影片</option>
-        <option name="00N70000002UFlz[]" value="其他">其他</option>
-    </select>
-
-    <label for="terms">我已閱讀並接受<a href="https://opportunities.aiesec.org/assets/terms.pdf" target="_blank"> 條款和條件。</a></label>
-    <input id="terms" type="checkbox" required oninvalid="this.setCustomValidity('勾選同意條款和條件')" oninput="setCustomValidity('')">
-    <input type="submit" id="submit_button" name="submit" clicked="false" class="send" value="繳交海外成長報名表">
-
-    <!-- hidden values -->
-    <input type="hidden" name="website_url" value="{RETURN URI}">
-    <input type="hidden" name="rating" value="Warm">
-    <input type="hidden" name="00N70000002UFkn" value="OGX GCDP">
-    <input type="hidden" name="00N70000002ULec" value="1">
-    <input type="hidden" name="lead_source" value="Global Volunteer">
-
-</form>
